--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -48,5 +48,6 @@
   "devDependencies": {},
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "proxy": "http://localhost:3030"
 }
