trrying to host through heroku for email services

--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -53,5 +53,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "proxy": "http://localhost:3030"
+  "proxy": "process.env.JAWSDB_URL"
 }
