--- a/react-portfolio/portfolio-api/config/.config.json
+++ b/react-portfolio/portfolio-api/config/.config.json
@@ -1,5 +1,19 @@
 {
-"production": {
+  "development": {
+    "username": "root",
+    "password": null,
+    "database": "passport_demo",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
+  "test": {
+    "username": "root",
+    "password": null,
+    "database": "database_test",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
+  "production": {
     "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
